--- a/replenishment-service/src/main/resources/application.properties
+++ b/replenishment-service/src/main/resources/application.properties
@@ -5,3 +5,15 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/disa
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+ru.panic.networks.btc=fsd
+ru.panic.networks.eth=fsdfsdfs
+ru.panic.networks.ltc=fsdfsd
+ru.panic.networks.sol=fsdfsd
+ru.panic.networks.trx=fsdfsd
+ru.panic.networks.xrp=fsdfsdfsd
+ru.panic.networks.doge=fsdfsdz
+
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
