--- a/replenishment-service/src/main/resources/application.properties
+++ b/replenishment-service/src/main/resources/application.properties
@@ -12,8 +12,10 @@ ru.panic.networks.eth=fsdfsdfs
 ru.panic.networks.ltc=fsdfsd
 ru.panic.networks.sol=fsdfsd
 ru.panic.networks.trx=fsdfsd
-ru.panic.networks.xrp=fsdfsdfsd
+ru.panic.networks.matic=fsdfsdfsd
 ru.panic.networks.doge=fsdfsdz
+
+ru.panic.networks.api.eth=fd
 
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
