--- a/replenishment-service/src/main/resources/application.properties
+++ b/replenishment-service/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 server.http2.enabled=true
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/disa
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-
 ru.panic.networks.btc=fsd
 ru.panic.networks.eth=fsdfsdfs
 ru.panic.networks.ltc=fsdfsd
@@ -14,8 +8,11 @@ ru.panic.networks.sol=fsdfsd
 ru.panic.networks.trx=fsdfsd
 ru.panic.networks.matic=fsdfsdfsd
 ru.panic.networks.doge=fsdfsdz
-
+ru.panic.networks.ton=sdf
 ru.panic.networks.api.eth=fd
+
+spring.data.redis.url=redis://localhost:6379/0
+spring.data.redis.port=6379
 
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
