--- a/general-management-service/src/main/resources/application.properties
+++ b/general-management-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.http2.enabled=true
+server.port=8082
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/disa
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
